# naive-logger

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: configuration.md
examples/: demo.rs  naive.rs  simple.rs  young.rs
src/: config.rs  lib.rs  logger.rs  macros.rs
src/appender/: console.rs  file.rs  mod.rs
src/config/: appender.rs  encoder.rs  logger.rs  mod.rs  util.rs
src/encoder/: json.rs  mod.rs  pattern.rs
