[package]
name = "naive-logger"
description = "A naive asynchronous logger implemetation."
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
features = ["serde_support", "kv"]

[dependencies]
log = "0.4"
chrono = "0.4"
crossbeam-channel = "0.5"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
serde = ["dep:serde", "log/serde"]
kv = ["log/kv_unstable", "log/kv_unstable_std"]

[dev-dependencies]
toml = "0.8"

[[example]]
name = "naive"
required-features = ["serde", "kv"]
