[package]
name = "naive-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
indexmap = { version = "2.2", features = ["serde"] }
log = { version = "0.4", features = ["kv_serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
